objects/EmployeeStoreRetail__c.object
<CustomObject>
    <description>For Retail Employees only: Stores Information about Employees and the different Stores assigned where they can operate. (Floating Reps and other floatings)</description>
    <fields>
        <fullName>ChannelType__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMPANY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerCode__c</fullName>
        <description>Opus Dealer Code</description>
        <label>Dealer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveEnddate__c</fullName>
        <description>Effective End Date of Assignment</description>
        <label>Effective End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <description>Effective Start Date of assignment</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>Employee</description>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Stores Retail</relationshipLabel>
        <relationshipName>RetailFloatingEmps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Employee Id + Store Id for Record Key Uniqueness</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeStore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify Home Store</description>
        <label>Home Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defines if the association is expired</description>
        <label>IsExpired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFProfileId__c</fullName>
        <description>Retail Field. Used to easy the custom SOQL to get the CenterPoint Profile assigned to an employee.</description>
        <formula>TEXT(Employee__r.SFProfileId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Profile Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <description>Store assigned</description>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Employee Stores Retail</relationshipLabel>
        <relationshipName>EmployeeStoresRetail</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Retail Field. Used to easy the custom SOQL to add/remove  entries from LeadShare object based on the EmployeeStoreRetail object association.</description>
        <formula>Employee__r.User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <label>Employee Stores Retail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId__c</columns>
        <columns>Employee__c</columns>
        <columns>Store__c</columns>
        <columns>IsExpired__c</columns>
        <columns>HomeStore__c</columns>
        <columns>EffectiveStartDate__c</columns>
        <columns>EffectiveEnddate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Redistribution</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>HomeStore__c</columns>
        <columns>Store__c</columns>
        <columns>IsExpired__c</columns>
        <columns>SFProfileId__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Reshma Jewrani</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/8/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/9/2020 12:00 AM</value>
        </filters>
        <label>Redistribution</label>
    </listViews>
    <nameField>
        <label>Employee Store Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Stores Retail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>